<resources>
    <string name="app_name">Care Crew</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="filter_opportunities">Filter Opportunities</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="loading_name">Loading name…</string>
    <string name="loading_email">Loading email…</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="groups">Groups</string>
    <string name="create_post">Post</string>
    <string name="selected_image">Selected Image</string>
    <string name="title_activity_map_view_fragment">MapViewFragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="opportunities">Opportunities</string>
    <string name="default_web_client_id">323163308967-0a95skpaekhnt5b4jsgsjt44ho3i21e9.apps.googleusercontent.com</string>
    
    <!-- Two-Factor Authentication Strings -->
    <string name="security_lock_icon">Security Lock Icon</string>
    <string name="two_factor_authentication">Two-Factor Authentication</string>
    <string name="two_fa_description">Secure your account with an additional layer of protection</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="otp_sent_message">We\'ve sent a verification code to your phone number</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="enable_two_fa">Enable Two-Factor Authentication</string>
    <string name="disable_two_fa">Disable Two-Factor Authentication</string>
    <string name="two_fa_status">2FA Status: %s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

</resources>